Add changes for publishing under org.cloudhoist